# seoranker

./: .env.example  .gitignore  LICENSE  README.md  project-structure  pyproject.toml  run.sh  setup.sh
config/: brand.json  models.json
docs/: implementation_plan.md  workflow.md
docs/architecture/: seo-agent-architecture.md
generated_content/coffee_20241229_205219/: blog_post.md  metadata.json  social_media.md
generated_content/coffee_20241229_215140/: linkedin_post.md  metadata.json  twitter_thread.md  untitled.md
generated_content/instant coffee_20241229_211129/: hashtags.md  linkedin_post.md  metadata.json  twitter_thread.md  untitled.md
knowledge_base/coffee/: 20241229_215118_15 Interesting Facts About Coffee You Should Know.md  20241229_215118_Buying Coffee A Complete Guide to Buy Your Best Co.md  20241229_215118_Guide to Everything Coffee Coffee 101 Back to Basi.md  20241229_215118_Strange Interesting Facts.md  20241229_215118_The Coffee Guide Updated.md  20241229_215118_metadata.json
knowledge_base/instant coffee/: 20241229_211104_Almost half of the world actually prefers instant .md  20241229_211104_Best Instant Coffee Brands To Try In 2021 - FriedC.md  20241229_211104_Odd coffee fact Much of the world prefers instant.md  20241229_211104_The Best Instant Coffee Ranked.md  (+2 more)
output/: arabica_beans.html  beans.html  instant_coorg.html  robusta_cofee.html
scripts/: generate_article.py
seoranker/: __init__.py  build_knowledge_base.py  linkedin.py  main.py  medium.py  shopify.py  twitter.py
tests/: test_imports.py  test_setup.py  verify_imports.py
(+22 files in other folders)
